# aries-vcx

./: Cargo.toml
aries/agents/sample_framework_agent/src/: main.rs
aries/aries_vcx/src/utils/: encryption_envelope.rs
aries/aries_vcx/tests/: test_did_exchange.rs
aries/aries_vcx_wallet/src/wallet/askar/: mod.rs
aries_framework_vcx/: architecture.md
aries_framework_vcx/src/: connection_service.rs  framework.rs  invitation_service.rs  lib.rs  messaging_service.rs  transports.rs
did_core/did_resolver_registry/src/: lib.rs
vcx_framework/: Cargo.toml  README.md  architecture.md
vcx_framework/src/: lib.rs
vcx_framework/src/repositories/: connection_repository.rs  did_repository.rs  mod.rs
vcx_framework/src/storage/: base.rs  error.rs  in_memory_storage.rs  mod.rs  record.rs
vcx_framework/src/transport/: mod.rs
