[package]
name = "vcx_framework"
version.workspace = true
authors.workspace = true
description = "A framework to provide a simple and easy to use system for using VCX"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aries_vcx = { path = "../aries/aries_vcx", features = [
  "anoncreds",
  "askar_wallet",
] }
did_resolver_registry = { path = "../did_core/did_resolver_registry" }
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2"
url = "2.5.4"
reqwest = {version = "0.12.9", features = ["json"] }
async-trait = "0.1.83"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.42", features = ["rt", "macros", "rt-multi-thread"] }
